test/integration/bad/new/compound-assign-decl-bad2.stan
transformed data { real T[1] <- {1.1};}